Refactor export and publish to their own sections.

--- a/custom.org
+++ b/custom.org
@@ -839,60 +839,6 @@ function.
     ;; Global key binding to make storing links to files easier.
     (global-set-key (kbd "C-c l") 'org-store-link)
 
-    ;; Enable "expert" export interface.
-    (setq org-export-dispatch-use-expert-ui t)
-
-    ;; Enable Markdown export backend.
-    (require 'ox-md)
-    (add-to-list 'org-export-backends 'md)
-
-    ;; Fontify _SRC blocks in org-mode buffers.
-    (setq org-src-fontify-natively t)
-
-    ;; Generate a stylesheet rather than inline CSS.
-    (setq org-html-htmlize-output-type 'css)
-
-    ;; Customize HTML export styling.
-    (require 'ox-html)
-    (setq org-html-head-include-default-style nil
-          org-html-postamble-format '(("en" "<p class=\"author\">%a</p>
-    <p class=\"date\">%C</p>
-    <p class=\"creator\">%c</p>"))
-          org-html-postamble t)
-
-    (defun update-org-css ()
-      "Update the `org-html-head' variable with the contents of the
-    ~/.emacs.d/org.css file."
-      (interactive)
-      (let ((css-filename (expand-file-name "org.css" user-emacs-directory))
-            (css-wrapper "<style type=\"text/css\">
-    <!--/*--><![CDATA[/*><!--*/
-    %s/*]]>*/-->
-    </style>"))
-        (setq org-html-head (format css-wrapper
-                                    (file-contents-as-string css-filename)))))
-    (add-hook 'org-export-before-processing-hook
-              (lambda (backend) (update-org-css)))
-
-    (setq org-html-head-extra
-          "<link href='http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css' rel='stylesheet'>")
-
-    ;; Publishing.
-    (setq org-publish-project-alist
-          `(("work-org-files"
-             :base-directory ,(expand-file-name "work" org-directory)
-             :base-extension "org"
-             :publishing-directory ,(expand-file-name "published" (expand-file-name "work" org-directory))
-             :publishing-function org-html-publish-to-html
-             :with-planning t)
-            ("work-static-files"
-             :base-directory ,(expand-file-name "work" org-directory)
-             :base-extension "pdf\\|csv\\|sql"
-             :publishing-directory ,(expand-file-name "published" (expand-file-name "work" org-directory))
-             :publishing-function org-publish-attachment)
-            ("work"
-             :components ("work-org-files" "work-static-files"))))
-
     ;; Use ido-completion.
     (setq org-completion-use-ido t)
 
@@ -909,6 +855,67 @@ function.
      (global-set-key (kbd "C-c a") 'org-agenda)
      (global-set-key (kbd "C-x c") 'org-switchb)
      (global-set-key (kbd "<f12>") 'org-agenda-list)
+   #+END_SRC
+
+** Export
+
+   #+BEGIN_SRC emacs-lisp
+     ;; Enable "expert" export interface.
+     (setq org-export-dispatch-use-expert-ui t)
+
+     ;; Enable Markdown export backend.
+     (require 'ox-md)
+     (add-to-list 'org-export-backends 'md)
+
+     ;; Fontify _SRC blocks in org-mode buffers.
+     (setq org-src-fontify-natively t)
+
+     ;; Generate a stylesheet rather than inline CSS.
+     (setq org-html-htmlize-output-type 'css)
+
+     ;; Customize HTML export styling.
+     (require 'ox-html)
+     (setq org-html-head-include-default-style nil
+           org-html-postamble-format '(("en" "<p class=\"author\">%a</p>
+     <p class=\"date\">%C</p>
+     <p class=\"creator\">%c</p>"))
+           org-html-postamble t)
+
+     (defun update-org-css ()
+       "Update the `org-html-head' variable with the contents of the
+     ~/.emacs.d/org.css file."
+       (interactive)
+       (let ((css-filename (expand-file-name "org.css" user-emacs-directory))
+             (css-wrapper "<style type=\"text/css\">
+     <!--/*--><![CDATA[/*><!--*/
+     %s/*]]>*/-->
+     </style>"))
+         (setq org-html-head (format css-wrapper
+                                     (file-contents-as-string css-filename)))))
+     (add-hook 'org-export-before-processing-hook
+               (lambda (backend) (update-org-css)))
+
+     (setq org-html-head-extra
+           "<link href='http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css' rel='stylesheet'>")
+   #+END_SRC
+
+** Publish
+
+   #+BEGIN_SRC emacs-lisp
+     (setq org-publish-project-alist
+           `(("work-org-files"
+              :base-directory ,(expand-file-name "work" org-directory)
+              :base-extension "org"
+              :publishing-directory ,(expand-file-name "published" (expand-file-name "work" org-directory))
+              :publishing-function org-html-publish-to-html
+              :with-planning t)
+             ("work-static-files"
+              :base-directory ,(expand-file-name "work" org-directory)
+              :base-extension "pdf\\|csv\\|sql"
+              :publishing-directory ,(expand-file-name "published" (expand-file-name "work" org-directory))
+              :publishing-function org-publish-attachment)
+             ("work"
+              :components ("work-org-files" "work-static-files"))))
    #+END_SRC
 
 ** Babel
