--- a/custom.org
+++ b/custom.org
@@ -1265,6 +1265,14 @@ function.
     (winner-mode)
   #+END_SRC
 
+* yaml-mode
+
+  #+BEGIN_SRC emacs-lisp
+    (require 'yaml-mode)
+
+    (add-to-list 'auto-mode-alist '("\\.yml$" . yaml-mode))
+  #+END_SRC
+
 * yasnippet
 
   #+BEGIN_SRC emacs-lisp
