Publish png images.

--- a/custom.org
+++ b/custom.org
@@ -925,7 +925,7 @@ function.
               :with-planning t)
              ("work-static-files"
               :base-directory ,(expand-file-name "work" org-directory)
-              :base-extension "pdf\\|csv\\|sql"
+              :base-extension "pdf\\|csv\\|sql\\|png"
               :publishing-directory ,(expand-file-name "published" (expand-file-name "work" org-directory))
               :publishing-function org-publish-attachment)
              ("work"
