Fix terminal stop subjob C-z binding.

--- a/custom.org
+++ b/custom.org
@@ -87,6 +87,7 @@ function.
      (global-unset-key (kbd "<f11>"))
      (global-unset-key (kbd "C-h"))
      (global-unset-key (kbd "C-q"))
+     (global-unset-key (kbd "C-z"))
      (global-unset-key (kbd "M-`"))
      (global-unset-key (kbd "M-c"))
      (global-unset-key (kbd "M-h"))
@@ -791,6 +792,7 @@ function.
           ("C-n" . term-send-down)
           ("C-r" . term-send-reverse-search-history)
           ("C-m" . term-send-raw)
+          ("C-z" . term-stop-subjob)
           ("M-f" . term-send-forward-word)
           ("M-b" . term-send-backward-word)
           ("M-p" . previous-line)
