tramp - Fixup tmpdir on OS X.

--- a/custom.org
+++ b/custom.org
@@ -1278,6 +1278,15 @@ function.
      (define-key term-mode-map (kbd "M-x") 'smex)
    #+END_SRC
 
+* tramp
+
+  Fix =ControlPath too long= errors due to OS X pitching a [[https://lists.macosforge.org/pipermail/macports-tickets/2011-June/084295.html][long temporary
+  directory]] to =ssh=.
+
+  #+BEGIN_SRC emacs-lisp
+    (setenv "TMPDIR" "/tmp")
+  #+END_SRC
+
 * virtualenvwrapper
 
   #+BEGIN_SRC emacs-lisp
