Add JSON files to find file in project list.

--- a/custom.org
+++ b/custom.org
@@ -545,6 +545,7 @@ function.
                               "*.el"
                               "*.html"
                               "*.js"
+                              "*.json"
                               "*.md"
                               "*.org"
                               "*.py"
